--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,12 @@ div {
 #navbar {border:3px solid purple;background:lightpink}
 #debugStuff {border:3px solid black;background:lightgrey}
 
-.purple {color:purple}
-.green {color:green;}
-.blue {color:blue;}
-.red {color:red;}
-
 span {display:inline-block;margin:0 10px 0 0;}
 
-a {display:inline-blick;background:orange;margin:0 0 0 10px;padding:10px;}
+a {display:inline-blick;background:orange;margin:0 10px 0 0;padding:10px;color:#000 !important;text-decoration:none !important;cursor:pointer;}
+a:hover {background:lightsalmon;}
+
+h5 {padding:0;margin:0 0 20px 0 !important;}
+
+.s200 {color:green;}
+.s401, .s500 {color:red;}
