--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,7 @@ div {
 #landing {border:3px solid green;background:lightgreen}
 #navbar {border:3px solid purple;background:lightpink}
 #debugStuff {border:3px solid black;background:lightgrey}
+#newPost {border: 3px solid orangered; background: orange;}
 
 span {display:inline-block;margin:0 10px 0 0;}
 
