--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ div {
 #login {border:3px solid yellow;background:lightyellow;display:block;}
 #signup {border:3px solid seagreen;background:lightseagreen;}
 #postDisplay {border:3px solid goldenrod;background:lightyellow;}
+#postById {border:3px solid red;background:lightcoral}
 .active {background-color:#fff;color:#000}
 .notActive {background-color:rgb(99, 99, 99);color:rgb(206, 206, 206);}
 .toggler {display:inline-block;width:300px;}
