--- a/src/App.css
+++ b/src/App.css
@@ -183,6 +183,11 @@ h2 {
     color:#fff;
 }
 .tag:hover {background:#d047c8}
+.tag {
+    display:block;
+    width:fit-content;
+    margin:0 auto;
+}
 .post-controls {
     display:flex;
     justify-content:right;
@@ -384,4 +389,26 @@ p a {text-decoration: none;}
     margin:2rem auto 2rem;
     border-radius:20px;
     display:block;
+}
+#new-post {
+    position:fixed;
+    right:2rem;
+    bottom:2rem;
+    background: linear-gradient(-45deg, #fd3c8e, #d047c8, #4a72e2, #5cd8fb);
+    background-size: 400% 400%;
+    animation: gradient 15s ease infinite;
+    transition:box-shadow 0.25s;
+    box-shadow: 0 0 20px 1px rgba(0, 0, 0, 0.2);
+    font-size:30pt !important
+}
+#new-post:hover {
+    box-shadow: 0 0 20px 1px #d047c8;
+}
+#owner {
+    text-decoration:none;
+    margin:0 0 1rem !important;
+    display:block;
+}
+#owner:before {
+    content: 'by '
 }
