--- a/src/App.css
+++ b/src/App.css
@@ -219,7 +219,7 @@ h2 {
     height:30rem;
     margin-top:2rem;
 }
-#description {height:10rem;}
+#description {height:250px;}
 .save {
     margin:2rem auto 0;
     display:block;
@@ -429,4 +429,8 @@ p a {text-decoration: none;}
     color: #fd3c8e;
     -webkit-text-stroke: 1px rgba(175, 44, 100, 0.4);
     font-size: 0.85rem;
+}
+.error-adjust {
+    margin-top:1rem;
+    margin-bottom:0;
 }
